<resources>
    <string name="app_name" translatable="false">EliteTop</string>
    <string name="divider" translatable="false">Divider</string>
    <string name="logo" translatable="false">Logo</string>
    <!-- Navigation View -->
    <string name="nav_drawer_start" translatable="false">Start</string>
    <string name="nav_drawer_close" translatable="false">Close</string>

    <!-- Utilities -->

    <string name="intro">¡Bienvenido a Elite Top!</string>
    <string name="next">Siguiente</string>
    <string name="before">Anterior</string>
    <string name="user">Usuario:%1$s</string>

    <!-- Data arrays -->

    <string-array name="accountType_array">
        <item name="accountType-trainer">Entrenador</item>
        <item name="accountType-athlete">Atleta</item>
    </string-array>

    <string-array name="genres_array">
        <item name="genres-man">Hombre</item>
        <item name="genres_woman">Mujer</item>
    </string-array>

    <!-- Signout -->
    <string name="signout">Cerrar sesión</string>

    <!-- Config -->
    <string name="config">Configuración</string>

    <!-- Login Activity -->
    <string name="login">Iniciar Sesión</string>
    <string name="login_recoverAccount">¿Has olvidado tu contraseña? Recupera tu cuenta.</string>
    <string name="login_infoRegister">¿Aún no tienes una cuenta? Regístrate aquí.</string>

    <!-- Register Activity -->
    <string name="register">Regístrate</string>
    <!-- First -->
    <string name="email">Correo electrónico</string>
    <string name="nickname">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="repeatPassword">Repetir contraseña</string>
    <string name="phone">Numero de teléfono</string>
    <string name="accountType">Selecciona tu tipo de cuenta</string>
    <!-- Second -->
    <string name="name">Nombre</string>
    <string name="surnames">Apellidos</string>
    <string name="genre">Selecciona tu sexo</string>
    <string name="nationality">Selecciona tu nacionalidad</string>
    <string name="birthDate">Fecha de nacimiento</string>
    <!-- Third -->
    <string name="sports">Deportes</string>

    <!-- Recover Password Activity -->
    <string name="recoverPassword_intro">Recuperar contraseña</string>
    <string name="sendEmail">Enviar correo</string>

    <!-- Bottom Navigation -->
    <string name="bottom_nav_menu_item_home">Inicio</string>
    <string name="bottom_nav_menu_item_training">Training</string>
    <string name="bottom_nav_menu_item_dieta">Dieta</string>
    <string name="bottom_nav_menu_item_anadirevento">Añadir evento</string>
    <string name="bottom_nav_menu_item_resultados">Resultados</string>
    <string name="bottom_nav_menu_item_perfil">Perfil</string>

    <!-- Edit Profile -->
    <string name="save">Guardar cambios</string>

</resources>