<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_menu_athlete_item_entrenamiento"
        android:icon="@drawable/ic_accesibility"
        android:title="@string/bottom_nav_menu_item_training" />
    <item
        android:id="@+id/bottom_nav_menu_athlete_item_dieta"
        android:icon="@drawable/ic_food"
        android:title="@string/bottom_nav_menu_item_dieta" />
    <item
        android:id="@+id/bottom_nav_menu_athlete_item_anadirevento"
        android:icon="@drawable/ic_add"
        android:title="@string/bottom_nav_menu_item_anadirevento" />
    <item
        android:id="@+id/bottom_nav_menu_athlete_item_resultados"
        android:icon="@drawable/ic_results"
        android:title="@string/bottom_nav_menu_item_resultados" />
    <item
        android:id="@+id/bottom_nav_menu_athlete_item_perfil"
        android:icon="@drawable/ic_person"
        android:title="@string/bottom_nav_menu_item_perfil" />
</menu>