<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompleteRegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/completeregister_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/completeregister_form_name_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:endIconMode="clear_text"
                app:startIconContentDescription="UserIcon"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/completeregister_form_name_material_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/divider"
                android:src="@drawable/empty_divider" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/completeregister_form_surnames_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:endIconMode="clear_text"
                app:startIconContentDescription="UserIcon"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/completeregister_form_surnames_material_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surnames"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/divider"
                android:src="@drawable/empty_divider" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:startIconContentDescription="UserIcon"
                app:startIconDrawable="@drawable/ic_baseline_people_outline_24">

                <AutoCompleteTextView
                    android:id="@+id/completeregister_form_genre_material_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/genre"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/divider"
                android:src="@drawable/empty_divider" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:startIconContentDescription="UserIcon"
                app:startIconDrawable="@drawable/ic_baseline_flag_24">

                <AutoCompleteTextView
                    android:id="@+id/completeregister_form_nationality_material_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nationality"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/divider"
                android:src="@drawable/empty_divider" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/completeregister_form_birthdate_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:startIconContentDescription="UserIcon"
                app:startIconDrawable="@drawable/ic_baseline_calendar_today_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/completeregister_form_birthdate_material_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birthDate" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/completeregister_form_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>