<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompleteRegisterActivity">

    <TextView
        android:id="@+id/completeregister_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completeregister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completeregister_intro"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/completeregister_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/completeregister_form_name_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:endIconMode="clear_text"
                android:orientation="horizontal"
                app:startIconContentDescription="UserIcon"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/completeregister_form_name_material_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/divider"
                android:src="@drawable/empty_divider" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/completeregister_form_surnames_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surnames"
                app:endIconMode="clear_text"
                android:orientation="horizontal"
                app:startIconContentDescription="UserIcon"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/completeregister_form_surnames_material_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/divider"
                android:src="@drawable/empty_divider" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/genre"
                android:orientation="horizontal"
                app:startIconContentDescription="UserIcon"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <AutoCompleteTextView
                    android:id="@+id/completeregister_form_genre_material_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/divider"
                android:src="@drawable/empty_divider" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nationality"
                android:orientation="horizontal"
                app:startIconContentDescription="UserIcon"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <AutoCompleteTextView
                    android:id="@+id/completeregister_form_nationality_material_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/divider"
                android:src="@drawable/empty_divider" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/completeregister_form_birthdate_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthdate"
                android:orientation="horizontal"
                app:startIconContentDescription="UserIcon"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/completeregister_form_birthdate_material_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/completeregister_form_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToLastStepRegister"
                android:text="@string/next" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>